# blog

./: Dockerfile  pyproject.toml
evrone_fastapi/: main.py  settings.py
